# web_6

./: 1.sql  10.sql  2.sql  3.sql  4.sql  5.sql  6.sql  7.sql  8.sql  9.sql  create_db.py  fill_data.py  main.py  pyproject.toml  tables.db  tables.sql
